# robet

./: .env.example  .gitignore  Constitution-Robet.md  PROJECT_CONSTITUTION.md  README.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260623_0001_initial_persisted_mvp.py  20260623_0002_real_football_data_foundation.py  20260623_0003_real_odds_events.py
backend/app/: main.py
backend/app/api/routes/: bankroll.py  bet_builder.py  dev.py  health.py  learning.py  matches.py  odds.py  recommendations.py  settings.py  sync_football.py
backend/app/core/: config.py  security_flags.py
backend/app/db/: base.py  repositories.py  session.py
backend/app/domain/bankroll/: engine.py
backend/app/domain/bet_builder/: engine.py
backend/app/domain/learning/: engine.py
backend/app/domain/normalization/: team.py
backend/app/domain/probability/: engine.py
backend/app/domain/recommendation/: engine.py
backend/app/providers/football_api/: client.py  mapper.py  schemas.py  service.py
backend/app/providers/mock/: world_cup.py
backend/app/providers/odds_api/: client.py  mapper.py  schemas.py  service.py
backend/app/schemas/: models.py
backend/app/services/: persistence.py
backend/tests/: conftest.py  test_api.py  test_bankroll.py  test_bet_builder.py  test_persistence.py  test_probability.py  test_real_football_foundation.py  test_real_odds_api.py  test_recommendations.py  test_security_flags.py
docs/: ROBET_INTELLIGENCE_EVOLUTION_PLAN.md
frontend/: index.html  package-lock.json  package.json
(+2 files in other folders)
